@startuml
skinparam classAttributeIconSize 0

class Editor {
- String content
+ EditorState createState()
+ void undo(EditorState)
+ String getContent()
+ void setContent(String)
}

class EditorState {
- String content
+ String getContent()
}

class History {
~ Stack<EditorState> stack
+ void push(EditorState)
+ EditorState pop()
}

class Editor
note top : Originator(发起者)

class EditorState
note right : Memento(备忘录)

class History
note top : caretaker(监护人)

History *--> EditorState
Editor ..> EditorState


@enduml